Fixes issue with options not being selectable on mobile due to more info content needing to be moved off screen.

--- a/src/components/CoffeeSelection/styles.module.scss
+++ b/src/components/CoffeeSelection/styles.module.scss
@@ -32,7 +32,7 @@
 
   .imgContainer {
 
-    min-height: 300px;
+    min-height: 200px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
